@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed MapScript processTemplate and processQueryTemplate seg fault (#3468)
+
 - Fixed shapeObj->toWkt() returns single point for multipoint geometry (#2762)
 
 - Fixed Internal server error when Oracle returns ora-28002 code (#3457)
